--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -42,6 +42,7 @@ ol, ul {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+  margin: 0 auto;
 }
 
 /*******************************************************************************
