--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,8 +18,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
+article, aside, canvas, details, embed, 
+figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
@@ -37,7 +37,11 @@ footer, header, hgroup, menu, nav, section {
 
 figure{
   display: block;
-margin: 0 auto;
+  margin: 0 auto;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 ol, ul {
