--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,7 +12,7 @@ MeyerWeb Reset
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
+del, dfn, em, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
@@ -28,21 +28,20 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
 }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
 figure{
-  display: block;
-  margin: 0 auto;
+  margin: 0 auto；
   padding: 0;
   border: 0;
   font: inherit;
   vertical-align: baseline;
 }
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
 
 ol, ul {
   list-style: none;
@@ -160,7 +159,7 @@ img {
 
 p img {
   display: inline;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   vertical-align: middle;
   text-align: center;
