--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -16,8 +16,8 @@ del, dfn, em, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
+fieldset, form, label, legend, 
+caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
@@ -28,6 +28,15 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
 }
+
+table{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align： middle;
+}
+
 figure{
   margin: 0 auto；
   padding: 0;
