--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -60,6 +60,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
   margin: 0 auto;
+  vertical-align： middle;
 }
 
 /*******************************************************************************
